# sly_web

./: CMakeLists.txt  main.cpp
include/: log.h
src/: CMakeLists.txt  log.cc
test/: CMakeLists.txt  log_test.cc
